    NOTE: pgld already had builtin support for gz packed lists, if it was
    compiled with zlib support.
  * use sed instead of echo to add newline at end of blocklist
  * cd / after downloading blocklists (instead of only cd'ing into the
    directory, but not leaving again)
  * init: added firewalld and moved $syslog to Should-Start|Stop

  [hasufell]
  * MAKE: do not recreate already existent dirs (Closes: SF bug #325)
  * BUILD: do not expand path variables in configure.ac
  * BUILD: small cleanup to systemd bits

  [freemind]
  * major refactoring of the pglgui code
  * fixed issues with local blocklists
  * Added port aliases (if any) when adding new whitelist items.
  * Fixed bug when removing an added item.
  * Fixed warning icon not disapearing from option after applying changes.
  * Improved validation of ports/ips.
 -- jre <jre-phoenix@users.sourceforge.net>  Thu, 03 Oct 2013 13:52:02 +0200
  * Added call to cleanData to remove possible empty config variables in
    pglcmd.conf.
  * Added reload command to execute script instead of reloading pgl after.



pgl 2.2.2

  [jre]
  * changed default to not log to syslog (LOG_SYSLOG="0")
  * fixed pending ";" in IP_REMOVE results in empty blocklist
  * added "env" to the example WGET_OPTS for proxies. Closes: SF bug #3581707
  * fixed reading ipfilter.dat lines which contain a : in the decription
  * updated documentation

  [hasufell]
  * added gentoo init script, accessible via --with-gentoo-init
  * cleaned up configure.ac (AM_CFLAGS)

  [freemind]
  * fixed bug that prevented apply button from getting enabled.
  * modified iptables related functions to use always port numbers and not
    names (fix)
  * fixed pglgui crashes if you try to whitelist permanently, while pgl is not
    running.
  * code refactoring

 -- jre <jre-phoenix@users.sourceforge.net>  Mon, 25 Jun 2012 16:09:21 +0200


pgl 2.2.1

  [jre]
  * Disabled dbus closing and reopening on reload. Fixes bug "pgld binaries